# SDL-RC-Controller

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO
CustomController/: CMakeLists.txt
CustomController/include/: behavior.h  inputController.h
CustomController/src/: behavior.cpp  inputController.cpp
example/: main.cpp
qml/: ChannelConfigurator_V1.qml  ChannelConfigurator_V2.qml  Main.qml
src/: ChannelConfig.h  JsonHelper.h  QmlControllerApi.cpp  QmlControllerApi.h
